Ajustes na doc do swagger
