# storage/api-docs/api-docs.json
@@ -57,6 +57,12 @@
                 "responses": {
                     "200": {
                         "description": "successful operation"
+                    },
+                    "422": {
+                        "description": "unprocessable entity"
+                    },
+                    "204": {
+                        "description": "empty response"
                     }
                 }
             }
